fixes testimonial layout issue and does some prettying up

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -373,8 +373,19 @@ ul.secondarynav > li.active > a:focus > .secondnav-item {
 /* ==========================================================================
    Testimonials
    ========================================================================== */
+#testimonials {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 .testimonial {
   display: none;
+  float: none;
+  flex: 1 1 auto;
+}
+.testimonial h3 {
+  margin-top: ($line-height-computed / 2);
+  margin-bottom: 0;
 }
 .speech-bubble {
   color: $testimonial-color;
@@ -392,7 +403,7 @@ ul.secondarynav > li.active > a:focus > .secondnav-item {
 }
 
 .bottom {
-  border-color: $primary-dark transparent transparent transparent;
+  border-color: $testimonial-bg transparent transparent transparent;
   border-width: 8px 8px 0px 8px;
   bottom: -8px;
 }
